--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
 		"@fortawesome/free-brands-svg-icons": "^6.6.0",
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
-		"@fortawesome/svelte-fontawesome": "^0.2.2"
+		"@fortawesome/svelte-fontawesome": "^0.2.2",
+		"svelte-device-info": "^1.0.5"
 	}
 }
