--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev --host 0.0.0.0 --port 3000",
+		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"host": "vite"
 	},
 	"devDependencies": {
 		"@skeletonlabs/skeleton": "^2.10.2",
@@ -28,7 +29,8 @@
 		"prettier-plugin-tailwindcss": "^0.6.4",
 		"svelte": "^4.2.7",
 		"tailwindcss": "^3.4.4",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"vite-plugin-qrcode": "^0.2.3"
 	},
 	"type": "module",
 	"dependencies": {
