--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"@skeletonlabs/tw-plugin": "^0.4.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.7",
+		"@typescript-eslint/eslint-plugin": "^8.2.0",
+		"@typescript-eslint/parser": "^8.2.0",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -28,6 +30,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.4",
 		"svelte": "^4.2.7",
 		"tailwindcss": "^3.4.4",
+		"typescript": "^5.5.4",
 		"vite": "^5.0.3",
 		"vite-plugin-qrcode": "^0.2.3"
 	},
