--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@fortawesome/svelte-fontawesome": "^0.2.2",
 		"@skeletonlabs/skeleton": "^2.10.2",
+		"aws-sdk": "^2.1685.0",
 		"svelte-device-info": "^1.0.5"
 	}
 }
