--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@skeletonlabs/skeleton": "^2.10.2",
 		"@types/aws-sdk": "^2.7.0",
 		"@vercel/analytics": "^1.5.0",
+		"@vercel/blob": "^0.27.2",
 		"@vercel/speed-insights": "^1.0.12",
 		"aws-sdk": "^2.1689.0",
 		"svelte-device-info": "^1.0.5"
